// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message rendering 1`] = `
<div
  className=""
>
  <div>
    <h2>
      Testing
    </h2>
  </div>
  <div>
    <p>
      Message content
    </p>
  </div>
</div>
`;

exports[`Message rendering with icon 1`] = `
<div
  class=""
>
  <div>
    <h2>
      Sample icon SVGTesting
    </h2>
  </div>
  <div>
    <p>
      Message content
    </p>
  </div>
</div>
`;
